--- a/twilight-sparkle/src/Components/AgentConsole.css
+++ b/twilight-sparkle/src/Components/AgentConsole.css
@@ -1,3 +1,36 @@
 .agentConsole {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  grid-row-gap: 10px;
+  grid-template-areas:
+    'header header header header'
+    'ccp ccp none none'
+    'main main main main';
+
   outline: 2px dotted pink;
+}
+.agentConsole h1 {
+  grid-area: header;
+}
+.agentConsole h1::first-letter {
+  font-size: 1.75em;
+  color: red;
+}
+
+#ccpContainer {
+  grid-area: ccp;
+
+  height: 465px;
+  padding: 25px;
+
+  border: 1px solid green;
+}
+
+#section-main {
+  grid-area: main;
+
+  height: 495px;
+
+  border: 1px solid red;
 }
