--- a/twilight-sparkle/src/Components/AgentConsole.css
+++ b/twilight-sparkle/src/Components/AgentConsole.css
@@ -14,7 +14,8 @@
   grid-area: header;
 }
 .agentConsole h1::first-letter {
-  font-size: 1.75em;
+  text-transform: uppercase;
+  font-size: 1.5em;
   color: red;
 }
 
