--- a/twilight-sparkle/src/Components/App.css
+++ b/twilight-sparkle/src/Components/App.css
@@ -8,7 +8,7 @@
   pointer-events: none;
 }
 
-.App-header {
+main {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -16,6 +16,7 @@
   align-items: center;
   justify-content: center;
   color: white;
+  padding: 2px;
 }
 
 .App-link {
